added in profile photo

--- a/index.html
+++ b/index.html
@@ -32,17 +32,19 @@
         <!-- Left area of main section -->
         <div class="left-div d-flex flex-column">
             <div class="profilecontainer">
-                <img src="img/alex.png" alt="Jin Kai" class="rounded-image">
+                <img src="img/linkedin_photo.jpg" alt="Jin Kai" class="rounded-image">
                 <p>
                     <span class="fw-bold">Jin Kai</span><span>Full-Stack Developer</span>
                 </p>
             </div>
             <ul class="social d-flex gap-4">
-                <li class="socials-list"><a href="https://linkedin.com/in/jinkaiyong/"><i class="icons bi bi-linkedin"></i> </a>
+                <li class="socials-list"><a href="https://linkedin.com/in/jinkaiyong/"><i class="icons bi bi-linkedin"
+                            title="LinkedIn"></i> </a>
                 </li>
-                <li class="socials-list"><a href="https://github.com/yongjinkai"><i class="icons bi bi-github"></i> </a>
+                <li class="socials-list"><a href="https://github.com/yongjinkai"><i class="icons bi bi-github"
+                            title="GitHub"></i> </a>
                 </li>
-                <li class="socials-list"><a href="mailto:yongjinkai@outlook.sg"><i
+                <li class="socials-list"><a title="Email" href="mailto:yongjinkai@outlook.sg"><i
                             class="icons bi bi-envelope-arrow-up-fill"></i> </a>
                 </li>
 
