--- a/index.html
+++ b/index.html
@@ -105,19 +105,16 @@
                 <section class="col-12 col-md-6 col-lg-8">
                     <h3 class="">Description:</h3>
                     <p class="text-justify text-white">The classic snake game, written in python and displayed using
-                        Turtle Graphics. The snake's speed can be adjusted easily and it comes with a high-score
+                        Turtle Graphics. This project uses OOP concepts to create each snake segment and food on the
+                        screen. The snake's speed can be adjusted easily and it comes with a high-score
                         feature. Easily control the snake's direction using keyboard controls. The game ends when the
                         snake collides with a wall.</p>
-                    <h4 class="">Languages:</h4>
+                    <h4 class="">Languages and tools:</h4>
                     <ul class="list-unstyled">
                         <li class="d-inline pe-2 text-white">Python</li>
+                        <li class="d-inline pe-2 text-white">Turtle graphics</li>
                     </ul>
-                    <h4 class="">Skills:</h4>
-                    <ul class="list-unstyled">
-                        <li class="d-inline pe-2 text-white">Turtle Graphics</li>
 
-                        <li class="d-inline pe-2 text-white">Object Oriented Programming</li>
-                    </ul>
                     <h4 class="mb-3">Demo Link:</h4>
                     <a href="https://github.com/yongjinkai/SnakeGame" target="_blank" class="btn btn-dark me-1"><i
                             class="bi bi-box-arrow-up-right"></i>&hairsp;GitHub</a>
@@ -134,13 +131,9 @@
                     <p class="text-justify text-white">A spotify playlist app that connects with your actual spotify
                         account through the Spotify API. You can search for any songs and easily add it into a playlist
                         name of your choice, and it will automatically be saved to your account.</p>
-                    <h4 class="">Languages:</h4>
+                    <h4 class="">Languages and tools:</h4>
                     <ul class="list-unstyled">
                         <li class="d-inline pe-2 text-white">Javascript</li>
-
-                    </ul>
-                    <h4 class="">Skills:</h4>
-                    <ul class="list-unstyled">
                         <li class="d-inline pe-2 text-white">React</li>
                     </ul>
                     <h4 class="mb-3">Demo Link:</h4>
@@ -162,14 +155,15 @@
                         administrator can edit patient subscription and medical info, as well as assign a nurse to
                         different patients. This project is the culmination of hardwork of our team members to create a
                         functional website, employing both frontend and backend skills learnt throughout the course.</p>
-                    <h4 class="">Languages:</h4>
+                    <h4 class="">Languages and tools:</h4>
+                    <span>Frontend:</span>
                     <ul class="list-unstyled">
                         <li class="d-inline pe-2 text-white">HTML, CSS, Javascript</li>
-                        <li class="d-inline pe-2 text-white">Java</li>
-                    </ul>
-                    <h4 class="">Skills:</h4>
-                    <ul class="list-unstyled">
                         <li class="d-inline pe-2 text-white">Bootstrap</li>
+                    </ul>
+                    <span>Backend:</span>
+                    <ul class="list-unstyled">
+                        <li class="d-inline pe-2 text-white">Java</li>
                         <li class="d-inline pe-2 text-white">Springboot</li>
                         <li class="d-inline pe-2 text-white">JUnit, Mockito</li>
                     </ul>
