fixed mobile view

--- a/index.html
+++ b/index.html
@@ -12,23 +12,8 @@
 </head>
 
 <body>
-
-    <!-- Set up your page structure here -->
-    <!-- Start of header -->
-    <!-- <a name="top"></a>
-    <nav class="navbar navbar-default navbar-expand-sm fixed-top bg-primary-subtle p-0">
-        <ul class="m-0 p-2 ms-auto">
-            <li><a href="#top">Home</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
-    </nav> -->
-    <!-- End of header -->
-
-
-
     <!-- Start of Main Section -->
-    <section id="mainsection" class="mt-5">
+    <div id="mainsection" class="mt-5">
         <!-- Left area of main section -->
         <div class="left-div d-flex flex-column">
             <div class="profilecontainer">
@@ -73,7 +58,7 @@
             </div>
         </div>
 
-        <div class="right-div">
+        <div class="right-div ">
             <!-- Right area of main section -->
             <div class="text"></div>
             <h1>Hi! <span class="typing"></span></h1>
@@ -87,13 +72,13 @@
                 <a href="#projects">View projects below.</a>
             </div>
         </div>
-    </section>
+    </div>
     <!-- End of Main Section -->
 
 
 
     <!-- Start of Project Section -->
-    <section id="developer" class="container page-content pt-5">
+    <div class="container page-content pt-5">
         <h1 class="pt-3" id="projects">Projects</h1>
 
         <div id="works" class="text-secondary pt-3">
@@ -176,7 +161,7 @@
             </div>
             <hr class="border-1 border-top border-white">
         </div>
-    </section>
+    </div>
     <!-- End of Project Section -->
 
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
