added new project

--- a/index.html
+++ b/index.html
@@ -68,9 +68,54 @@
                 capstone project. I bring over 6 years in the semiconductor industry as a process engineer, and i am
                 combining my engineering background with software development to tackle real-world problems
                 and build effective solutions.</p>
-            <div class="linkcontainer">
-                <a href="#projects">View projects below.</a>
+            <div class="row mt-3 mb-4 pt-5">
+                <section class="col-12 col-md-6 col-lg-6 border-right">
+                    <img src="img/rebound_app.gif" alt="" class="w-100 mb-3">
+                    <div class="linkcontainer">
+                        <a href="#projects">View All Projects <i class="bi bi-caret-down-fill"></i></a>
+                    </div>
+                </section>
+                <section class="col-12 col-md-6 col-lg-6">
+                    <h3 class="">Recent Project:</h3>
+                    <p class="text-justify text-white">My most recent project is our capstone project done during a
+                        3-month
+                        bootcamp. The aim is to provide at-home patient care service by
+                        linking up nurses and patient through our app.</p>
+                    <details>
+                        <summary>See More...</summary>
+                        <p>Patients can register through our app, and there
+                            are
+                            administrator and nurse roles that have different access levels. This project is the
+                            culmination
+                            of hardwork of our team members to create a
+                            functional website, employing both frontend and backend skills learnt throughout the course.
+                        </p>
+                        <h4 class="">Languages and tools:</h4>
+                        <span>Frontend:</span>
+                        <ul class="list-unstyled">
+                            <li class="d-inline pe-2 text-white">HTML, CSS, Javascript</li>
+                            <li class="d-inline pe-2 text-white">Bootstrap</li>
+                        </ul>
+                        <span>Backend:</span>
+                        <ul class="list-unstyled">
+                            <li class="d-inline pe-2 text-white">Java</li>
+                            <li class="d-inline pe-2 text-white">Springboot</li>
+                            <li class="d-inline pe-2 text-white">JUnit, Mockito</li>
+                        </ul>
+                        <h4 class="mb-3">Demo Link:</h4>
+                        <a href="https://github.com/yongjinkai/CapstoneProjectFE" target="_blank"
+                            class="btn btn-dark me-1 mb-1"><i
+                                class="bi bi-box-arrow-up-right "></i>&hairsp;GitHub(FE)</a>
+                        <a href="https://github.com/yongjinkai/CapstoneProjectBE" target="_blank"
+                            class="btn btn-dark me-1 mb-1"><i
+                                class="bi bi-box-arrow-up-right"></i>&hairsp;GitHub(BE)</a>
+                    </details>
+
+                </section>
+
+
             </div>
+
         </div>
     </div>
     <!-- End of Main Section -->
@@ -82,6 +127,30 @@
         <h1 class="pt-3" id="projects">Projects</h1>
 
         <div id="works" class="text-secondary pt-3">
+            <div class="row mt-3 mb-4">
+                <h2 class="py-3 text-info console-font">Data Parsing Project</h2>
+                <section class="col-12 col-md-6 col-lg-4 ">
+                    <img src="img/parsing_program.gif" alt="parsing program animation" class="w-100 mb-3">
+                </section>
+                <section class="col-12 col-md-6 col-lg-8">
+                    <h3 class="">Description:</h3>
+                    <p class="text-justify text-white">A parsing program with a fully functional GUI written for my
+                        previous role as a Process Integration Engineer. It collates all the raw data provided by the
+                        machine and does
+                        many backend calculations based on customizable user inputs. It then generates an excel with
+                        summarised data that is more meaningful to stakeholders.</p>
+                    <h4 class="">Languages and tools:</h4>
+                    <ul class="list-unstyled">
+                        <li class="d-inline pe-2 text-white">Python</li>
+                        <li class="d-inline pe-2 text-white">Pandas</li>
+                        <li class="d-inline pe-2 text-white">Matplotlib, Seaborn</li>
+                    </ul>
+
+                    <h4 class="mb-3">Demo Link:</h4>
+                    <a href="https://github.com/yongjinkai/SnakeGame" target="_blank" class="btn btn-dark me-1"><i
+                            class="bi bi-box-arrow-up-right"></i>&hairsp;GitHub</a>
+                </section>
+            </div>
             <div class="row mt-3 mb-4">
                 <h2 class="py-3 text-info console-font">Classic Snake Game</h2>
                 <section class="col-12 col-md-6 col-lg-4 ">
@@ -105,7 +174,7 @@
                             class="bi bi-box-arrow-up-right"></i>&hairsp;GitHub</a>
                 </section>
             </div>
-            <hr class="border-1 border-top border-white">
+
             <div class="row mt-3 mb-4">
                 <h2 class="py-3 text-info console-font">Spotify playlist app</h2>
                 <section class="col-12 col-md-6 col-lg-4 border-right">
@@ -128,38 +197,8 @@
                             class="bi bi-box-arrow-up-right"></i>&hairsp;Visit Website</a>
                 </section>
             </div>
-            <div class="row mt-3 mb-4">
-                <h2 class="py-3 text-info console-font">Capstone Project</h2>
-                <section class="col-12 col-md-6 col-lg-4 border-right">
-                    <img src="img/rebound_app.gif" alt="" class="w-100 mb-3">
-                </section>
-                <section class="col-12 col-md-6 col-lg-8">
-                    <h3 class="">Description:</h3>
-                    <p class="text-justify text-white">Our project aims to provide at-home patient care services by
-                        linking up nurses and patient through our app. Patients can register through our app, and the
-                        administrator can edit patient subscription and medical info, as well as assign a nurse to
-                        different patients. This project is the culmination of hardwork of our team members to create a
-                        functional website, employing both frontend and backend skills learnt throughout the course.</p>
-                    <h4 class="">Languages and tools:</h4>
-                    <span>Frontend:</span>
-                    <ul class="list-unstyled">
-                        <li class="d-inline pe-2 text-white">HTML, CSS, Javascript</li>
-                        <li class="d-inline pe-2 text-white">Bootstrap</li>
-                    </ul>
-                    <span>Backend:</span>
-                    <ul class="list-unstyled">
-                        <li class="d-inline pe-2 text-white">Java</li>
-                        <li class="d-inline pe-2 text-white">Springboot</li>
-                        <li class="d-inline pe-2 text-white">JUnit, Mockito</li>
-                    </ul>
-                    <h4 class="mb-3">Demo Link:</h4>
-                    <a href="https://github.com/yongjinkai/CapstoneProjectFE" target="_blank"
-                        class="btn btn-dark me-1"><i class="bi bi-box-arrow-up-right"></i>&hairsp;GitHub(FE)</a>
-                    <a href="https://github.com/yongjinkai/CapstoneProjectBE" target="_blank"
-                        class="btn btn-dark me-1"><i class="bi bi-box-arrow-up-right"></i>&hairsp;GitHub(BE)</a>
-                </section>
-            </div>
-            <hr class="border-1 border-top border-white">
+
+
         </div>
     </div>
     <!-- End of Project Section -->
