--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
                 </section>
                 <section class="col-12 col-md-6 col-lg-8">
                     <h3 class="">Description:</h3>
-                    <p class="text-justify text-white">A parsing program with a fully functional GUI written for my
-                        previous role as a Process Integration Engineer. It collates all the raw data provided by the
+                    <p class="text-justify text-white">A parsing program with a fully functional GUI written during my
+                        time as a Process Integration Engineer. It collates all the raw data provided by the
                         machine and does
                         many backend calculations based on customizable user inputs. It then generates an excel with
                         summarised data that is more meaningful to stakeholders.</p>
