--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                     </ul>
 
                     <h4 class="mb-3">Demo Link:</h4>
-                    <a href="https://github.com/yongjinkai/SnakeGame" target="_blank" class="btn btn-dark me-1"><i
+                    <a href="https://github.com/yongjinkai/Parsing-Program.git" target="_blank" class="btn btn-dark me-1"><i
                             class="bi bi-box-arrow-up-right"></i>&hairsp;GitHub</a>
                 </section>
             </div>
