--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
         <div id="works" class="text-secondary pt-3">
             <div class="row mt-3 mb-4">
-                <h2 class="py-3 text-info console-font">Data Parsing Project</h2>
+                <h2 class="py-3 text-info console-font">Data Parsing Program</h2>
                 <section class="col-12 col-md-6 col-lg-4 ">
                     <img src="img/parsing_program.gif" alt="parsing program animation" class="w-100 mb-3">
                 </section>
