--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="profilecontainer">
                 <img src="img/linkedin_photo.jpg" alt="Jin Kai" class="rounded-image">
                 <p>
-                    <span class="fw-bold">Jin Kai</span><span>Full-Stack Developer</span>
+                    <span class="fw-bold">Jin Kai</span><span>Full-Stack Developer Trainee</span>
                 </p>
             </div>
             <ul class="social d-flex gap-4">
