--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
                     <li>React</li>
                     <li>Springboot</li>
                     <li>Junit + Mockito (Unit Tests)</li>
+                    <li>FastAPI</li>
                 </ul>
                 <p class="subheader fw-bold m-0 py-1">Builds with:</p>
                 <ul class="list-group list-unstyled ps-4 mt-1 mb-3">
